syntax = "proto3";

package server;
option go_package = "github.com/pachyderm/pachyderm/v2/src/server/worker/server";

import "pps/pps.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "server/worker/datum/datum.proto";

message CancelRequest {
  string job_id = 1 [(gogoproto.customname) = "JobID"];
  repeated string data_filters = 2;
}

message CancelResponse {
  bool success = 1;
}

message NextDatumRequest {
  string error = 1;
}

message NextDatumResponse {
  repeated string env = 1;
}

service Worker {
  rpc Status(google.protobuf.Empty) returns (pps_v2.WorkerStatus) {}
  rpc Cancel(CancelRequest) returns (CancelResponse) {}
  rpc NextDatum(NextDatumRequest) returns (NextDatumResponse) {}
}
